// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > renders Vue component (full) 1`] = `
"---
// Generated by MistCSS, do not modify
import './component.mist.css'

import type { SetupContext } from 'vue'
import type { JSX } from 'vue/jsx-runtime'

type Props = { attr?: 'a' | 'b', attrFooBar?: 'foo-bar', isFoo?: boolean, propFoo?: string, propBar?: string } & JSX.IntrinsicElements['div']

export function Foo({ attr, attrFooBar, isFoo, propFoo, propBar, ...props }: Props, { slots }: SetupContext) {
  return (<div {...props} data-attr={attr} data-attr-foo-bar={attrFooBar} data-is-foo={isFoo} style={{ '--prop-foo': propFoo, '--prop-bar': propBar }} class="foo" >{slots.default?.()}</div>)
}
"
`;

exports[`render > renders Vue component (minimal) 1`] = `
"---
// Generated by MistCSS, do not modify
import './component.mist.css'

import type { SetupContext } from 'vue'
import type { JSX } from 'vue/jsx-runtime'

type Props = {  } & JSX.IntrinsicElements['div']

export function Foo({ ...props }: Props, { slots }: SetupContext) {
  return (<div {...props} class="foo" >{slots.default?.()}</div>)
}
"
`;

exports[`render > renders Vue component (void element) 1`] = `
"---
// Generated by MistCSS, do not modify
import './component.mist.css'


import type { JSX } from 'vue/jsx-runtime'

type Props = {  } & JSX.IntrinsicElements['hr']

export function Foo({ ...props }: Props) {
  return (<hr {...props} class="foo" />)
}
"
`;
